--- a/trunk/of/app/views/projects/_list.rhtml
+++ b/trunk/of/app/views/projects/_list.rhtml
@@ -9,22 +9,23 @@
     <th><%= link_to _('Latest File'),  sort_param('listing', Project, 'updated_at', 'updated_at') %></th>
     <th><%= link_to _('Download'),  sort_param('listing', Project, 'project_counter', 'project_counter') %></th>
   </tr>
-  
-<% for project in projects %>
-  <tr class="item_h">
+<% i=0; class_name = ""; -%>
+<% for project in projects -%>
+  <% i = 1 - i -%>
+  <% if i == 1; class_name="odd"; else; class_name="even"; end; -%>
+  <tr class="item_h <%=class_name%>">
     <td><a href="<%= url_for(:action => 'show', :id => project.id) %>"><%= h project.summary %></a></td>
     <td><%= h project.created_at %></td>
     <td><%= h project.updated_at %></td>
     <td><%= h project.project_counter %></td>
   </tr>
-  <tr class="item_b">
+  <tr class="item_b <%=class_name%>">
     <td><img src="<%= url_for(:controller => :images,:action => "image", :id => project.icon,:size => 64) %>"/></td>
     <td colspan="2"><%= h project.description %><br/></td>
     <td><%= link_to _('Download'), releases_path(:project_id => project.id) %></td>
   </tr>
-<% end %>
+<% end -%>
 </table>
-
 <%= will_paginate projects %>
 
 <br />
