--- a/trunk/of/app/views/layouts/application.rhtml
+++ b/trunk/of/app/views/layouts/application.rhtml
@@ -111,7 +111,7 @@
 <div id="MiddlePane">
   <div id="MainContent">
     <%if params["project_id"] != nil%>
-      <h1><%=@project.summary%></h1>
+      <h1><%= h(@project.summary) %></h1>
     <%end%>
     <div id="Flash"><%= show_flash %></div>
     <%= yield :layout %>
