--- a/trunk/of/app/views/releases/_top_download_list.rhtml
+++ b/trunk/of/app/views/releases/_top_download_list.rhtml
@@ -1,7 +1,7 @@
 <div id="ReleaseList">
 <h1><%= _('Listing releases') %></h1>
 
-<table>
+<table class=list-table>
   <tr>
     <th></th>
     <th><%= _('Rank') %></th>
@@ -10,9 +10,10 @@
     <th><%= _('Download') %></th>
   </tr>
   
-<% i=(@page-1)*10 %>
+<% i=(@page-1)*100 %>
 <% for release in releases %>
-  <tr>
+ <%if i % 2 == 0; class_name="odd"; else; class_name="even"; end; -%>
+  <tr class="<%= class_name %>">
     <td><img src="<%= url_for(:controller => :images,:action => "image", :id => Project.find(release.project_id).icon,:size => 16) %>"/></td>
     <td><%= (i+=1).to_s %></td>
     <td><%= link_to h(release.name), "/projects/#{release.project_id}/releases/#{release.id}" %></td>
