--- a/trunk/of/app/views/user/edit.rhtml
+++ b/trunk/of/app/views/user/edit.rhtml
@@ -1,7 +1,19 @@
 <div title="user edit" class="form">
   <%#= head_helper :error => true %>
   <%= error_messages_for :user %>
-<img src="<%= url_for(:controller => :images, :action => "image", :id => @user.icon) %>"/>
+  <fieldset style='float:right'>
+    <legend><%= _('Change User Icon') %></legend>
+    <center>
+      <img src="<%= url_for(:controller => :images, :action => "image", :id => @user.icon) %>"/>
+    </center>
+    <br/>
+    <a href="#" onclick="Effect.toggle('UploadImage','appear'); return false">
+      <%=_('Change Icon')%>
+    </a>
+    <%= render :partial => 'images/edit', :locals => 
+    {:image_id => @user.icon, :id => @user.id,
+      :type => 'User', :back_to => url_for(:controller => :user, :action => :edit) }%>
+  </fieldset>
   <%= render :partial => 'images/edit', :locals => 
   {:image_id => @user.icon, :id => @user.id, :type => 'User', :back_to => '/user/edit' }%>
   
@@ -21,10 +33,4 @@
     <%= render :partial => 'privacy', :locals => {:f => f, :submit => true} %>
   <% end -%>
 
-  <% form_for :user, :url => { :action => :delete } do |f| -%>
-    <div class="user_delete">
-      <%= hidden_field_tag 'form', :value => 'delete' %>
-      <%= submit_tag _('Delete Account'), "class" => "button" %>
-    </div>
-  <% end -%>
 </div>
