--- a/trunk/of/app/views/projects/_role_new.rhtml
+++ b/trunk/of/app/views/projects/_role_new.rhtml
@@ -5,7 +5,7 @@
     <% end %>
     <br/>
     <%= text_field_tag 'name', '' ,{:size => 20 } %> 
-    <%= submit_tag 'New' %>
+    <%= submit_tag _('New') %>
   <% end %>
   <div id="role_edit">
   </div>
