--- a/trunk/of/app/views/projects/roles_edit.rhtml
+++ b/trunk/of/app/views/projects/roles_edit.rhtml
@@ -1,9 +1,9 @@
 <div id="ProjectEdit">
-<h1>Editing project roles</h1>
+  <h1><%= _('Editing Project Roles') %></h1>
 
 <fieldset>
-<legend>Role list</legend>
-<label>Select a role to edit.</label><br/>
+  <legend><%= _('Role List') %></legend>
+  <label><%= _('Select a Role to Edit') %></label><br/>
   
 <div id="roles_edit">
 <%= render :partial => "role_new" %>
@@ -12,8 +12,8 @@
 </fieldset>
 
 <fieldset>
-<legend>Role with users</legend>
-<label>Select a role to edit users.</label><br/>
+  <legend><%= _('Role with Users') %></legend>
+  <label><%= _('Select a Role to Edit Users') %></label><br/>
 <% for role in @roles %>
 <%= link_to_remote( role.name, :update => "role_users", :url => { :action => :role_users, :id => @project.id, :role => role.id } ) %>
 <% end %>
