--- a/trunk/of/app/views/user/_edit.rhtml
+++ b/trunk/of/app/views/user/_edit.rhtml
@@ -11,7 +11,7 @@
     <%= f.label :language, _('User|Language')+':' %>
     <%= f.language_select "user_language", @user.language, :name => "user[language]"%>
     <%= f.label :timezone, _('User|TimeZone')+':'%>
-    <%= f.select_tag 'user_timezone', options_for_select(['UTC'] + TZInfo::Timezone.all.map{|tz| [tz.to_s, tz.name]}.sort, @user.timezone), :name => "user[timezone]" %>
+    <%= time_zone_select 'user', 'timezone', TimeZone.all.sort, :model => TZInfo::Timezone %>
   </table>
     <%= submit_tag( new_record ? _('User|Signup') : _('User|Change Settings'), "class" => "button" ) if submit %>
 </fieldset>
