--- a/of/app/views/layouts/application.rhtml
+++ b/of/app/views/layouts/application.rhtml
@@ -139,10 +139,9 @@ var menudata=
       </div>
     <%else%>
       <div id="HomeLeft">
-        <%= render :partial => 'openfoundry/staticities', :locals => {:userCount => User.count(), :projectCount => Project.count(:conditions => Project.in_used_projects())} %>
+        <%= render :partial => 'openfoundry/staticities', :locals => {:userCount => User.count(), :projectCount => Project.count(:conditions => Project.in_used_projects()), :online_users => Session.online_users} %>
         <%= render :partial => 'releases/most_popular', :locals => {:downloadList => Release.top_download} %>
         <%= render :partial => 'projects/new_projects', :locals => {:projectList => Project.new_projects} %>
-        <%= render :partial => 'partials/tagcloud'%>
         
         <h3><img src="/images/of/icon01.gif" align="left" /><%=_('Steering Organization')%></h3>
         <div style="text-align:center;">
