--- a/trunk/of/app/views/openfoundry/_staticities.rhtml
+++ b/trunk/of/app/views/openfoundry/_staticities.rhtml
@@ -2,4 +2,13 @@
 <ul>
   <li>專案: <%= projectCount %>項</li>
   <li>使用者: <%= userCount %></li>
+  <li><%="#{_('Online Users')}:"%> 
+  <br/>
+  <% online_users.each_with_index do |u,i| %>
+    <%= user_portrait_link u %> 
+    <% unless i%5 %>
+      <br/>
+    <%end%>
+  <%end%>
+  </li>
 </ul>
