--- a/of/public/stylesheets/openfoundry.css
+++ b/of/public/stylesheets/openfoundry.css
@@ -4,6 +4,7 @@
 	font-size:13px;
   color:#666;
 }
+em { color:#00f}
 h1 { font-size:20px; }
 h2 { font-size:18px; }
 h3 { font-size:16px; }
@@ -80,7 +81,7 @@ body {
 #OFIntro #Module img { opacity:0.6; padding:8px; }
 #OFIntro #Module img:hover { opacity:1; }
 #OFIntro #Module a { font-size:15px; }
-#OFIntro #Module_Text { font-size:120%; }
+#OFIntro #Module_Text { font-size:100%; padding-top: 10px; }
 
 
 /* Left menu */
