--- a/trunk/of/app/views/projects/_form.rhtml
+++ b/trunk/of/app/views/projects/_form.rhtml
@@ -10,7 +10,7 @@
     <label for="project_#{col}">
       #{_("Project|#{col.capitalize}")}
     </label>
-    #{ '<em class="required">*</em>' if req }
+    #{ '<em class="required"><img src="/images/icon/star.gif"></em>' if req }
     #{ help_icon(help) if help }
 AAA
   end
