--- a/trunk/of/app/views/kwiki/index.rhtml
+++ b/trunk/of/app/views/kwiki/index.rhtml
@@ -1,1 +1,1 @@
-<iframe src="<%=@module_url%>" id="of_module" name="of_module" frameborder="0" style="width:750px; height:460px; "></iframe>
+<iframe src="<%=@module_url%>" id="of_module" name="of_module" frameborder="0"></iframe>
