--- a/trunk/of/app/views/rt/index.rhtml
+++ b/trunk/of/app/views/rt/index.rhtml
@@ -95,4 +95,4 @@
 
 <input type="hidden" id="TicketSearchString" value="<%=@base_url%>" />
 
-<iframe src="<%=@show_url%>" id="of_module" name="of_module" frameborder="0" style="width:750px; height:460px; "></iframe>
+<iframe src="<%=@show_url%>" id="of_module" name="of_module" frameborder="0"></iframe>
