--- a/of/app/views/projects/_list.rhtml
+++ b/of/app/views/projects/_list.rhtml
@@ -20,7 +20,7 @@
     <td align="center"><%= h project.project_counter %></td>
   </tr>
   <tr class="item_b <%=class_name%>">
-    <td><img src="<%= url_for(:controller => :images,:action => "image", :id => project.icon,:size => 64) %>"/></td>
+    <td><a href="<%= url_for(:action => 'show', :id => project.id) %>"><img src="<%= url_for(:controller => :images,:action => "image", :id => project.icon,:size => 64) %>"/></a></td>
     <td colspan="2"><%= h project.description %><br/></td>
     <td align="center"><%= link_to _('Download'), releases_path(:project_id => project.id) %></td>
   </tr>
