--- a/trunk/of/app/views/projects/_form.rhtml
+++ b/trunk/of/app/views/projects/_form.rhtml
@@ -30,14 +30,14 @@ AAA
   end
 
   def of_check_box_group(name, predefined, value)
-    values = "#{value}".split(",")
+    values = "#{value}".split(",").grep(/./)
     rtn = ""
     #predefined = predefined.sort
     predefined.each_with_index do |p, i|
       rtn += check_box_tag("#{name}[#{i}]", p, values.include?(p)) + p + "\n"
     end
     rtn += "<br/>" + _("Others") + " "
-    rtn += text_field_tag("#{name}[-1]", (values - predefined).join(","))
+    rtn += text_field_tag("#{name}[-1]", (values - predefined).join(", "))
   end
 %>
 
