--- a/trunk/of/app/views/projects/_form.rhtml
+++ b/trunk/of/app/views/projects/_form.rhtml
@@ -37,7 +37,7 @@ AAA
       rtn += check_box_tag("#{name}[#{i}]", p, values.include?(p)) + p + "\n"
     end
     rtn += "<br/>" + _("Others") + " "
-    rtn += text_field_tag("#{name}[-1]", (values - predefined).join(", "))
+    rtn += text_field_tag("#{name}[-1]", (values - predefined).join(", "), :size => 50)
   end
 %>
 
