--- a/of/app/views/projects/edit.rhtml
+++ b/of/app/views/projects/edit.rhtml
@@ -6,21 +6,7 @@
   <%= submit_tag 'Save' %>
 <% end %>
 
-<fieldset>
-	<% form_tag :action => 'add_tag', :id => @project do %>
-	<label for="tag">Add a tag:</label><br/>
-	<%= hidden_field_tag 'class', 'Project' %>
-	<%= text_field_tag 'tag', '',{:size => 10} %>
-	<%= submit_tag 'Add Tag' %>
-	<% end %>
-
-	<% form_tag :action => 'remove_tag', :id => @project do %>
-	<label for="tag">Remove a tag:</label><br/>
-	<%= hidden_field_tag 'class', 'Project' %>
-	<%= select_tag 'tag[]', options_for_select(@project.tag_list.names), { :multiple => true, :size => 5 } %>
-	<%= submit_tag 'Remove Tag' %>
-	<% end %>
-</fieldset>
+<!-- tags was here ... -->
 
 <%= link_to 'Show', :action => 'show', :id => @project %> |
 <%= link_to 'Back', :action => 'index' %>
